Fixed spacing between checkboxes in the import bookmarks dialog.
These were broken as of crrev.com/151698.

BUG=139834


Review URL: https://chromiumcodereview.appspot.com/11111019

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@161848 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 4267808559041aa91e19a2b36275317f3732ddf8

--- a/chrome/browser/resources/options/import_data_overlay.css
+++ b/chrome/browser/resources/options/import_data_overlay.css
@@ -8,7 +8,6 @@
 
 #import-checkboxes > div:not(:first-child) {
   -webkit-padding-start: 8px;
-  margin: 5px 0;
 }
 
 #import-throbber {
